# SVDC_preception_vlm

./: .gitignore  README.md  environment.yml  package.xml  setup.cfg  setup.py  svdc_vlm_config.example.json  test.py  test_with_ros_camera.py  test_with_webcam.py  vlm_driving_common.py
benchmark/: 01_download_drivelm.py  02_generate_gt.py  03_evaluate.py  drivelm_samples.json  gt_labels.json
svdc_preception_vlm/: __init__.py  test_with_ros_camera.py  test_with_webcam.py  vlm_driving_common.py
usb_cam/usb_cam/: CMakeLists.txt
usb_cam/usb_cam/config/: camera_info.yaml  params_1.yaml  params_2.yaml
usb_cam/usb_cam/src/: usb_cam_node.cpp
