<?xml version="1.0"?>
<package format="3">
  <name>svdc_preception_vlm</name>
  <version>0.1.0</version>
  <description>VLM-based driving-scene analysis with local webcam and ROS 2 camera entrypoints.</description>
  <maintainer email="yemoy@example.com">yemoy</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
